# dj-template-harness

./: .pre-commit-config  .pre-commit-config.yaml  README.md  install.sh  manage.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
actionkit/: __init__.py  apps.py  models.py  tests.py  urls.py  views.py
actionkit/templates/: index.html  recurring_update.html  recurring_update.html.example  wrapper.html
dj_template_harness/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
