[project]
name = "dj-template-harness"
version = "0.1.0"
description = ""
authors = [{ name = "DSA NTC", email = "ntc@dsacommittees.org" }]
dependencies = [
    "django",
    "ruff",
    "django-extensions",
    "werkzeug",
    "django-dotenv",
    "wagtail",
    "pre-commit",
    "pip-tools",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
select = ["ALL"]
ignore = ["COM812", "ISC001"]
exclude = ["**/migrations/*"]
fix = true
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests.py" = ["D100", "D101", "D102", "ANN101", "ANN201", "S101"]
"**/admin.py" = ["D101", "D102"]
"**/apps.py" = ["D100", "D101", "D102"]


[tool.setuptools]
packages = ["dj_template_harness", "actionkit"]
